포인트 적립 API 구현 (리뷰 수정시 발생) (#23)
* feat: 포인트 증감 내역 기록

* feat: 포인트 수정 API 구현(리뷰 수정시 발생)

* test: 포인트 수정(리뷰 수정시 발생) 이벤트 api 문서화

* feat: 리뷰 수정 기능 추가

* test: 포인트 수정 통합테스트 추가