@@ -2,7 +2,6 @@ package com.triple.mileage.integration.event;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import javax.persistence.EntityManager;
@@ -13,9 +12,12 @@ import com.triple.mileage.event.application.dto.EventRequestDto;
 import com.triple.mileage.integration.IntegrationTest;
 import com.triple.mileage.place.domain.Place;
 import com.triple.mileage.place.domain.PlaceRepository;
+import com.triple.mileage.review.application.ReviewService;
+import com.triple.mileage.review.application.dto.ReviewRequestDto;
 import com.triple.mileage.review.domain.Review;
 import com.triple.mileage.review.domain.ReviewImage;
 import com.triple.mileage.review.domain.ReviewRepository;
+import com.triple.mileage.user.application.UserService;
 import com.triple.mileage.user.domain.User;
 import com.triple.mileage.user.domain.UserRepository;
 
@@ -41,6 +43,12 @@ public class EventIntegrationTest extends IntegrationTest {
     @Autowired
     private EventService eventService;
 
+    @Autowired
+    private UserService userService;
+
+    @Autowired
+    private ReviewService reviewService;
+
     @PersistenceContext
     private EntityManager entityManager;
 
@@ -50,17 +58,16 @@ public class EventIntegrationTest extends IntegrationTest {
         // given
         User user1 = userRepository.save(new User(0));
         User user2 = userRepository.save(new User(0));
-        EventRequestDto dto1 = eventRequest(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
-        EventRequestDto dto2 = eventRequest(user2, "", Collections.emptyList());
+        EventRequestDto dto1 = reviewSaveEvent(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
+        EventRequestDto dto2 = reviewSaveEvent(user2, "", Collections.emptyList());
 
         // when
         eventService.progress(dto1);
         eventService.progress(dto2);
-        Optional<User> result = userRepository.findById(user2.getId());
+        User user = userService.findById(user2.getId());
 
         // then
-        assertThat(result.isPresent()).isTrue();
-        assertThat(result.get().getPoint()).isEqualTo(0);
+        assertThat(user.getPoint()).isEqualTo(0);
     }
 
     @Test
@@ -69,17 +76,16 @@ public class EventIntegrationTest extends IntegrationTest {
         // given
         User user1 = userRepository.save(new User(0));
         User user2 = userRepository.save(new User(0));
-        EventRequestDto dto1 = eventRequest(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
-        EventRequestDto dto2 = eventRequest(user2, "좋아요!", Collections.emptyList());
+        EventRequestDto dto1 = reviewSaveEvent(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
+        EventRequestDto dto2 = reviewSaveEvent(user2, "좋아요!", Collections.emptyList());
 
         // when
         eventService.progress(dto1);
         eventService.progress(dto2);
-        Optional<User> result = userRepository.findById(user2.getId());
+        User user = userService.findById(user2.getId());
 
         // then
-        assertThat(result.isPresent()).isTrue();
-        assertThat(result.get().getPoint()).isEqualTo(1);
+        assertThat(user.getPoint()).isEqualTo(1);
     }
 
     @Test
@@ -88,17 +94,16 @@ public class EventIntegrationTest extends IntegrationTest {
         // given
         User user1 = userRepository.save(new User(0));
         User user2 = userRepository.save(new User(0));
-        EventRequestDto dto1 = eventRequest(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
-        EventRequestDto dto2 = eventRequest(user2, "", List.of(new ReviewImage(), new ReviewImage()));
+        EventRequestDto dto1 = reviewSaveEvent(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
+        EventRequestDto dto2 = reviewSaveEvent(user2, "", List.of(new ReviewImage(), new ReviewImage()));
 
         // when
         eventService.progress(dto1);
         eventService.progress(dto2);
-        Optional<User> result = userRepository.findById(user2.getId());
+        User user = userService.findById(user2.getId());
 
         // then
-        assertThat(result.isPresent()).isTrue();
-        assertThat(result.get().getPoint()).isEqualTo(1);
+        assertThat(user.getPoint()).isEqualTo(1);
     }
 
     @Test
@@ -107,17 +112,16 @@ public class EventIntegrationTest extends IntegrationTest {
         // given
         User user1 = userRepository.save(new User(0));
         User user2 = userRepository.save(new User(0));
-        EventRequestDto dto1 = eventRequest(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
-        EventRequestDto dto2 = eventRequest(user2, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
+        EventRequestDto dto1 = reviewSaveEvent(user1, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
+        EventRequestDto dto2 = reviewSaveEvent(user2, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
 
         // when
         eventService.progress(dto1);
         eventService.progress(dto2);
-        Optional<User> result = userRepository.findById(user2.getId());
+        User user = userService.findById(user2.getId());
 
         // then
-        assertThat(result.isPresent()).isTrue();
-        assertThat(result.get().getPoint()).isEqualTo(2);
+        assertThat(user.getPoint()).isEqualTo(2);
     }
 
     @Test
@@ -125,21 +129,53 @@ public class EventIntegrationTest extends IntegrationTest {
     void contentAndPhotoAndFirstReview() {
         // given
         User user = userRepository.save(new User(0));
-        EventRequestDto requestDto = eventRequest(user, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
+        EventRequestDto requestDto = reviewSaveEvent(user, "좋아요!", List.of(new ReviewImage(), new ReviewImage()));
 
         entityManager.flush();
         entityManager.clear();
 
         // when
         eventService.progress(requestDto);
-        Optional<User> result = userRepository.findById(user.getId());
+        User result = userService.findById(user.getId());
 
         // then
-        assertThat(result.isPresent()).isTrue();
-        assertThat(result.get().getPoint()).isEqualTo(3);
+        assertThat(result.getPoint()).isEqualTo(3);
     }
 
-    private EventRequestDto eventRequest(User user, String content, List<ReviewImage> images) {
+    @Test
+    @DisplayName("리뷰 수정시 포인트가 수정된다. - 1점(보너스) -> 2점(내용 + 보너스)")
+    void updatePoint() {
+        // given
+        User user = userRepository.save(new User(0));
+        EventRequestDto prevDto = reviewSaveEvent(user, "", Collections.emptyList());
+
+        entityManager.flush();
+        entityManager.clear();
+
+        eventService.progress(prevDto);
+        User prev = userService.findById(user.getId());
+        int prevPoint = prev.getPoint();
+
+        ReviewRequestDto requestDto = new ReviewRequestDto(prevDto.getReviewId(), "좋아요!", Collections.emptyList());
+        reviewService.update(requestDto);
+
+        EventRequestDto curDto = new EventRequestDto(
+                "REVIEW", "MOD", prevDto.getReviewId(), requestDto.getContent(), Collections.emptyList(), user.getId(), prevDto
+                .getPlaceId()
+        );
+
+        // when
+        eventService.progress(curDto);
+        User cur = userService.findById(user.getId());
+        int curPoint = cur.getPoint();
+
+        // then
+        assertThat(prevPoint).isEqualTo(1);
+        assertThat(curPoint).isEqualTo(2);
+    }
+
+
+    private EventRequestDto reviewSaveEvent(User user, String content, List<ReviewImage> images) {
         Place place = placeRepository.save(new Place());
         Review review = reviewRepository.save(new Review(content, user, place, images));
         List<UUID> photos = review.getReviewImages().stream().map(ReviewImage::getId).collect(Collectors.toList());
